RTI-3356 Fix grid border rendering issues (#14187)
* TC4 scrolling columns visible under vertical scrollbar

* TC1 Gap between pinned columns and non-scrolling centre columns should be on left in RTL mode

* TC3 pinned rows have double border at bottom

* TC2 border below header in legacy themes

* Fix legacy pinned row borders

* TC5 double weight border to left of stacked headers

* TC6 Double border on header and no border above scrollbar when scrolling horizontally

* Bugfix

--- a/packages/ag-grid-community/src/theming/core/css/_general.css
+++ b/packages/ag-grid-community/src/theming/core/css/_general.css
@@ -51,6 +51,7 @@
     min-width: 0;
     overflow: hidden;
     flex: 1 1 auto;
+    background-color: var(--ag-data-background-color);
 }
 
 .ag-viewport {
@@ -343,7 +344,7 @@
     :where(.ag-row:not(.ag-full-width-row)),
     :where(.ag-header-row),
     :where(.ag-row.ag-embedded-full-width-row) {
-        :where(> .ag-grid-scrolling-cells) {
+        > :where(.ag-grid-scrolling-cells) {
             order: 1;
         }
     }
